2006-01-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* autogen.sh, m4/guile.m4, src/Makefile.am: Removed m4 files since 
	they are installation specifc.  Also, all required libraries should be
	coming from LIBGEDA_LDFLAGS.

	* tests/*: Updated some of the spice regression tests to have the
	correct spice-sdb version

2006-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20060123

        * README: Updated for the new year and release.

2006-01-15 Carlos Nieves Onega <cnieves@iespana.es>
	* scheme/gnet-drc2.scm: Changed error message to be more 
	self-explaining.
	
2006-01-07 Carlos Nieves Onega <cnieves@iespana.es>
	* scheme/gnet-drc2.scm: Added missing 'passive' in the 
	pintype-full-names list, and changed the pintype error/warning 
	message to something more self-explaining.
	
2006-01-07 Stuart Brorson <sdb AT cloud9 DOT net>
	*  configure.ac, src/Makefile.am:  Changed automake stuff
	to explicitly look for guile, and then link to it.

	*  autogen.sh, m4/guile.m4:  Added local guile macros.
	
2006-01-04 Stuart Brorson <sdb@cloud9.net>
	*  src/g_netlist.c, src/s_net.c, scheme/gnet-drc2.scm
	scheme/gnetlist.scm, scheme/gnet-systemc.scm, 
	scheme/gnet-vams.scm, scheme/gnet-verilog.scm
	scheme/gnet-vhdl.scm:  Modified code to emit
	"unconnected_pin-<number>" to fix bug noticed by John Doty.
	Besides modifying s_net.c to achieve this, I had to change
	the strcmp fcn in many files to a strncmp fcn to compare only
	the first 15 chars against "unconnected_pin".  Added strncmp?
	to scheme/gnetlist.scm to do this for Scheme backends.

	*  scheme/gnet-spice-sdb.scm:  Fix bug discovered by John Doty: 
	spice-IO pins with refdes greater than P9 were sorted 
	incorrectly (as strings).  Now they are sorted as numbers.
	
2005-12-28 Carlos Nieves Onega <cnieves@iespana.es>
	* src/g_netlist: Dereferenced return value of scm_c_module_lookup,
	which is passed to scm_sort_list_x.