@@ -1,4 +1,4 @@
-v 20031231 1
+v 20060123 1
 L 1000 600 800 400 3 0 0 0 -1 -1
 L 800 400 1000 200 3 0 0 0 -1 -1
 L 1200 400 1000 200 3 0 0 0 -1 -1
@@ -7,17 +7,13 @@ L 1000 600 1000 700 3 0 0 0 -1 -1
 L 1000 700 1300 700 3 0 0 0 -1 -1
 L 1300 100 1000 100 3 0 0 0 -1 -1
 L 1000 200 1000 100 3 0 0 0 -1 -1
-T 900 600 9 10 1 0 0 0 1
-+
-T 900 100 9 10 1 0 0 0 1
--
 L 1300 0 1300 800 3 0 0 0 -1 -1
 L 500 700 500 100 3 0 0 0 -1 -1
 L 500 100 200 100 3 0 0 0 -1 -1
 L 200 700 500 700 3 0 0 0 -1 -1
 L 200 800 200 0 3 0 0 0 -1 -1
 L 200 800 1300 800 3 0 0 0 -1 -1
-T -200 1000 9 8 0 0 0 0 1
+T 200 1050 5 10 0 0 0 0 1
 device=SPICE-ccvs
 L 1300 0 200 0 3 0 0 0 -1 -1
 L 1000 200 1000 600 3 0 0 0 -1 -1
@@ -25,47 +21,63 @@ L 500 200 550 325 3 0 0 0 -1 -1
 L 500 200 450 325 3 0 0 0 -1 -1
 P 200 700 0 700 1 0 1
 {
-T -400 800 5 8 0 0 0 0 1
+T 100 750 5 8 0 1 0 6 1
 pinnumber=3
-T -400 800 5 8 0 0 0 0 1
+T 100 650 5 8 0 1 0 8 1
 pinseq=3
-T -400 800 5 8 0 1 0 0 1 
-pinlabel=3
-T -400 800 5 8 0 1 0 0 1 
+T 250 700 9 8 0 1 0 0 1
+pinlabel=NC+
+T 250 700 5 8 0 1 0 2 1
 pintype=pas
 }
 P 200 100 0 100 1 0 1
 {
-T -400 -100 5 8 0 0 0 0 1
+T 100 150 5 8 0 1 0 6 1
 pinnumber=4
-T -400 -100 5 8 0 0 0 0 1
+T 100 50 5 8 0 1 0 8 1
 pinseq=4
-T -400 -100 5 8 0 1 0 0 1 
-pinlabel=4
-T -400 -100 5 8 0 1 0 0 1 
+T 250 100 9 8 0 1 0 0 1
+pinlabel=NC-
+T 250 100 5 8 0 1 0 2 1
 pintype=pas
 }
 P 1300 100 1500 100 1 0 1
 {
-T 1400 -100 5 8 0 0 0 0 1
+T 1400 150 5 8 0 1 0 0 1
 pinnumber=2
-T 1400 -100 5 8 0 0 0 0 1
+T 1400 50 5 8 0 1 0 2 1
 pinseq=2
-T 1400 -100 5 8 0 1 0 0 1 
-pinlabel=2
-T 1400 -100 5 8 0 1 0 0 1 
+T 1250 100 9 8 0 1 0 6 1
+pinlabel=N-
+T 1250 100 5 8 0 1 0 8 1
 pintype=pas
 }
 P 1300 700 1500 700 1 0 1
 {
-T 1400 800 5 8 0 0 0 0 1
+T 1400 750 5 8 0 1 0 0 1
 pinnumber=1
-T 1400 800 5 8 0 0 0 0 1
+T 1400 650 5 8 0 1 0 2 1
 pinseq=1
-T 1400 800 5 8 0 1 0 0 1 
-pinlabel=1
-T 1400 800 5 8 0 1 0 0 1 
+T 1250 700 9 8 0 1 0 6 1
+pinlabel=N+
+T 1250 700 5 8 0 1 0 8 1
 pintype=pas
 }
-T 600 900 8 12 1 1 0 0 1
+T 600 850 8 10 1 1 0 0 1
 refdes=H?
+T 200 2050 5 10 0 0 0 0 1
+description=current controlled current source
+T 200 1450 5 10 0 0 0 0 1
+numslots=0
+T 200 1250 5 10 0 0 0 0 1
+symversion=0.1
+T 200 1850 5 10 0 0 0 0 1
+documentation=http://newton.ex.ac.uk/teaching/CDHW/Electronics2/userguide/sec3.html#3.2.2
+T 900 600 9 10 1 0 0 0 1
++
+T 900 100 9 10 1 0 0 0 1
+-
+T 200 1650 5 10 0 0 0 0 1
+comment=the sensing voltage source will be generated by the netlist backend
+T 800 -50 8 10 1 0 0 5 1
+value=1
